@@ -19,7 +19,7 @@ More verbose output is availabe using the verbose (-v) switch, for example:
 $ nvidia-detect -v
 Probing for supported NVIDIA devices...
 [10de:1287] NVIDIA Corporation GK208 [GeForce GT 730]
-This device requires the current 470.86 NVIDIA driver kmod-nvidia
+This device requires the legacy 470.103.01 NVIDIA driver kmod-nvidia
 
 $ nvidia-detect -v
 Probing for supported NVIDIA devices...
@@ -40,7 +40,7 @@ are always performed and compatibility information is displayed if run with the
 $ nvidia-detect -vx
 Probing for supported NVIDIA devices...
 [10de:1287] NVIDIA Corporation GK208 [GeForce GT 730]
-This device requires the current 470.86 NVIDIA driver kmod-nvidia
+This device requires the legacy 470.103.01 NVIDIA driver kmod-nvidia
 
 Checking ABI compatibility with Xorg Server...
 Xorg Video Driver ABI detected: 19
@@ -57,15 +57,16 @@ ABI compatibility check passed
 nvidia-detect may be run from within a script and will return the following codes:
 
 0: No supported devices found
-1: Device supported by the current 470.86 NVIDIA driver
+1: Device supported by the current 510.47.03 NVIDIA driver
 2: Device supported by the legacy 96.xx NVIDIA driver
 3: Device supported by the legacy 173.xx NVIDIA driver
 4: Device supported by the legacy 304.xx NVIDIA driver
 5: Device supported by the legacy 340.xx NVIDIA driver
 6: Device supported by the legacy 367.xx NVIDIA driver
 7: Device supported by the legacy 390.xx NVIDIA driver
+8: Device supported by the legacy 470.xx NVIDIA driver
 
 For a full list of supported devices, see:
-ftp://download.nvidia.com/XFree86/Linux-x86_64/470.86/README/supportedchips.html
+ftp://download.nvidia.com/XFree86/Linux-x86_64/510.47.03/README/supportedchips.html
 
 Bugs should be reported at http://elrepo.org/bugs
