@@ -109,8 +109,8 @@ static const u_int16_t nv_390xx_pci_ids[] = {
 	0x1243, 0x1244, 0x1245, 0x1246, 0x1247, 0x1248, 0x1249, 0x124B, 0x124D, 0x1251,
 };
 
-/* PCI device_ids supported by the current driver */
-static const u_int16_t nv_current_pci_ids[] = {
+/* PCI device_ids supported by the 470xx legacy driver */
+static const u_int16_t nv_470xx_pci_ids[] = {
 	0x0FC0, 0x0FC1, 0x0FC2, 0x0FC6, 0x0FC8, 0x0FC9, 0x0FCD, 0x0FCE, 0x0FD1, 0x0FD2,
 	0x0FD3, 0x0FD4, 0x0FD5, 0x0FD8, 0x0FD9, 0x0FDF, 0x0FE0, 0x0FE1, 0x0FE2, 0x0FE3,
 	0x0FE4, 0x0FE9, 0x0FEA, 0x0FEC, 0x0FED, 0x0FEE, 0x0FF3, 0x0FF6, 0x0FF8, 0x0FF9,
@@ -123,36 +123,42 @@ static const u_int16_t nv_current_pci_ids[] = {
 	0x11C4, 0x11C5, 0x11C6, 0x11C8, 0x11CB, 0x11E0, 0x11E1, 0x11E2, 0x11E3, 0x11FA,
 	0x11FC, 0x1280, 0x1281, 0x1282, 0x1284, 0x1286, 0x1287, 0x1288, 0x1289, 0x128B,
 	0x1290, 0x1291, 0x1292, 0x1293, 0x1295, 0x1296, 0x1298, 0x1299, 0x129A, 0x12B9,
-	0x12BA, 0x1340, 0x1341, 0x1344, 0x1346, 0x1347, 0x1348, 0x1349, 0x134B, 0x134D,
-	0x134E, 0x134F, 0x137A, 0x137B, 0x137D, 0x1380, 0x1381, 0x1382, 0x1390, 0x1391,
-	0x1392, 0x1393, 0x1398, 0x1399, 0x139A, 0x139B, 0x139C, 0x139D, 0x13B0, 0x13B1,
-	0x13B2, 0x13B3, 0x13B4, 0x13B6, 0x13B9, 0x13BA, 0x13BB, 0x13BC, 0x13C0, 0x13C2,
-	0x13D7, 0x13D8, 0x13D9, 0x13DA, 0x13F0, 0x13F1, 0x13F2, 0x13F3, 0x13F8, 0x13F9,
-	0x13FA, 0x13FB, 0x1401, 0x1402, 0x1406, 0x1407, 0x1427, 0x1430, 0x1431, 0x1436,
-	0x15F0, 0x15F7, 0x15F8, 0x15F9, 0x1617, 0x1618, 0x1619, 0x161A, 0x1667, 0x174D,
-	0x174E, 0x179C, 0x17C2, 0x17C8, 0x17F0, 0x17F1, 0x17FD, 0x1B00, 0x1B02, 0x1B06,
-	0x1B30, 0x1B38, 0x1B80, 0x1B81, 0x1B82, 0x1B84, 0x1B87, 0x1BA0, 0x1BA1, 0x1BB0,
-	0x1BB1, 0x1BB3, 0x1BB4, 0x1BB5, 0x1BB6, 0x1BB7, 0x1BB8, 0x1BB9, 0x1BBB, 0x1BC7,
+	0x12BA,
+};
+
+/* PCI device_ids supported by the current driver */
+static const u_int16_t nv_current_pci_ids[] = {
+	0x1340, 0x1341, 0x1344, 0x1346, 0x1347, 0x1348, 0x1349, 0x134B, 0x134D, 0x134E,
+	0x134F, 0x137A, 0x137B, 0x137D, 0x1380, 0x1381, 0x1382, 0x1390, 0x1391, 0x1392,
+	0x1393, 0x1398, 0x1399, 0x139A, 0x139B, 0x139C, 0x139D, 0x13B0, 0x13B1, 0x13B2,
+	0x13B3, 0x13B4, 0x13B6, 0x13B9, 0x13BA, 0x13BB, 0x13BC, 0x13C0, 0x13C2, 0x13D7,
+	0x13D8, 0x13D9, 0x13DA, 0x13F0, 0x13F1, 0x13F2, 0x13F3, 0x13F8, 0x13F9, 0x13FA,
+	0x13FB, 0x1401, 0x1402, 0x1406, 0x1407, 0x1427, 0x1430, 0x1431, 0x1436, 0x15F0,
+	0x15F7, 0x15F8, 0x15F9, 0x1617, 0x1618, 0x1619, 0x161A, 0x1667, 0x174D, 0x174E,
+	0x179C, 0x17C2, 0x17C8, 0x17F0, 0x17F1, 0x17FD, 0x1B00, 0x1B02, 0x1B06, 0x1B30,
+	0x1B38, 0x1B80, 0x1B81, 0x1B82, 0x1B83, 0x1B84, 0x1B87, 0x1BA0, 0x1BA1, 0x1BA2,
+	0x1BB0, 0x1BB1, 0x1BB4, 0x1BB5, 0x1BB6, 0x1BB7, 0x1BB8, 0x1BB9, 0x1BBB, 0x1BC7,
 	0x1BE0, 0x1BE1, 0x1C02, 0x1C03, 0x1C04, 0x1C06, 0x1C07, 0x1C09, 0x1C20, 0x1C21,
-	0x1C22, 0x1C30, 0x1C60, 0x1C61, 0x1C62, 0x1C81, 0x1C82, 0x1C8C, 0x1C8D, 0x1CB1,
-	0x1CB2, 0x1CB3, 0x1CB6, 0x1CBA, 0x1CBB, 0x1CBC, 0x1D01, 0x1D10, 0x1D12, 0x1D33,
-	0x1D81, 0x1DB1, 0x1DB3, 0x1DB4, 0x1DB5, 0x1DB6, 0x1DB7, 0x1DBA, 0x1B83, 0x1BA2,
-	0x1C23, 0x1C83, 0x1C8F, 0x1C92, 0x1DB8, 0x1DF5, 0x1E04, 0x1E07, 0x1E30, 0x1E82,
-	0x1E87, 0x1EB0, 0x1F02, 0x1F07, 0x1EB1, 0x1EB8, 0x1C91, 0x1E02, 0x1E90, 0x1ED0,
-	0x1F08, 0x1F10, 0x1F11, 0x1F50, 0x1F51, 0x2182, 0x1C31, 0x1C90, 0x1CBD, 0x1D11,
-	0x1D13, 0x1D52, 0x1F82, 0x1F91, 0x2184, 0x2191, 0x21D1, 0x1D34, 0x1EB5, 0x1EB6,
-	0x1F36, 0x1FB8, 0x1FB9, 0x1E84, 0x1EC2, 0x1EC7, 0x1F06, 0x1F42, 0x1F47, 0x1E81,
-	0x1DF6, 0x1E78, 0x1E89, 0x1F96, 0x21C4, 0x1C94, 0x1C96, 0x1CFA, 0x1CFB, 0x1D16,
-	0x1DF0, 0x1DF2, 0x1F09, 0x1F12, 0x2187, 0x1D02, 0x1E36, 0x1E91, 0x1E93, 0x1ED1,
-	0x1ED3, 0x1EF5, 0x1F0A, 0x1F0B, 0x1F14, 0x1F15, 0x1F54, 0x1F55, 0x1F76, 0x1F95,
-	0x1F97, 0x1F98, 0x1F99, 0x1F9C, 0x1F9D, 0x1FB0, 0x1FB1, 0x1FB2, 0x1FBB, 0x1FDD,
-	0x1FF9, 0x20B0, 0x20B1, 0x20B2, 0x20B6, 0x20B7, 0x20F1, 0x2188, 0x2189, 0x2192,
-	0x2204, 0x2206, 0x2230, 0x2231, 0x2235, 0x2236, 0x2237, 0x2484, 0x2486, 0x249C,
-	0x249D, 0x24B0, 0x24DC, 0x24DD, 0x2503, 0x2520, 0x2560, 0x1FBA, 0x1FBC, 0x24B6,
-	0x24B7, 0x24B8, 0x2504, 0x2523, 0x2563, 0x25A0, 0x25A2, 0x25A5, 0x25B8, 0x25E0,
-	0x25E2, 0x25E5, 0x1E09, 0x1EB4, 0x1FF0, 0x1FF2, 0x20B3, 0x20B5, 0x20F0, 0x20F2,
-	0x2208, 0x220D, 0x2216, 0x2232, 0x2482, 0x2487, 0x2488, 0x2489, 0x248A, 0x2531,
-	0x2571, 0x25B6,
+	0x1C22, 0x1C23, 0x1C30, 0x1C31, 0x1C60, 0x1C61, 0x1C62, 0x1C81, 0x1C82, 0x1C83,
+	0x1C8C, 0x1C8D, 0x1C8F, 0x1C90, 0x1C91, 0x1C92, 0x1C94, 0x1C96, 0x1CB1, 0x1CB2,
+	0x1CB3, 0x1CB6, 0x1CBA, 0x1CBB, 0x1CBC, 0x1CBD, 0x1CFA, 0x1CFB, 0x1D01, 0x1D02,
+	0x1D10, 0x1D11, 0x1D12, 0x1D13, 0x1D16, 0x1D33, 0x1D34, 0x1D52, 0x1D81, 0x1DB1,
+	0x1DB3, 0x1DB4, 0x1DB5, 0x1DB6, 0x1DB7, 0x1DB8, 0x1DBA, 0x1DF0, 0x1DF2, 0x1DF5,
+	0x1DF6, 0x1E02, 0x1E04, 0x1E07, 0x1E09, 0x1E30, 0x1E36, 0x1E78, 0x1E81, 0x1E82,
+	0x1E84, 0x1E87, 0x1E89, 0x1E90, 0x1E91, 0x1E93, 0x1EB0, 0x1EB1, 0x1EB5, 0x1EB6,
+	0x1EC2, 0x1EC7, 0x1ED0, 0x1ED1, 0x1ED3, 0x1EF5, 0x1F02, 0x1F03, 0x1F06, 0x1F07,
+	0x1F08, 0x1F09, 0x1F0A, 0x1F0B, 0x1F10, 0x1F11, 0x1F12, 0x1F14, 0x1F15, 0x1F36,
+	0x1F42, 0x1F47, 0x1F50, 0x1F51, 0x1F54, 0x1F55, 0x1F76, 0x1F82, 0x1F91, 0x1F95,
+	0x1F96, 0x1F97, 0x1F98, 0x1F99, 0x1F9C, 0x1F9D, 0x1F9F, 0x1FA0, 0x1FB0, 0x1FB1,
+	0x1FB2, 0x1FB8, 0x1FB9, 0x1FBA, 0x1FBB, 0x1FBC, 0x1FDD, 0x1FF0, 0x1FF2, 0x1FF9,
+	0x20B0, 0x20B2, 0x20B3, 0x20B5, 0x20B6, 0x20B7, 0x20F1, 0x2182, 0x2184, 0x2187,
+	0x2188, 0x2189, 0x2191, 0x2192, 0x21C4, 0x21D1, 0x2204, 0x2206, 0x2208, 0x220A,
+	0x220D, 0x2216, 0x2230, 0x2231, 0x2232, 0x2233, 0x2235, 0x2236, 0x2237, 0x2238,
+	0x2414, 0x2420, 0x2460, 0x2482, 0x2484, 0x2486, 0x2487, 0x2488, 0x2489, 0x248A,
+	0x249C,	0x249D, 0x24A0, 0x24B0, 0x24B6, 0x24B7, 0x24B8, 0x24DC, 0x24DD, 0x24E0,
+	0x2503, 0x2504, 0x2507, 0x2520, 0x2523, 0x2531, 0x2560, 0x2563, 0x2571, 0x25A0,
+	0x25A2, 0x25A5, 0x25A6, 0x25A7, 0x25A9, 0x25B6, 0x25B8, 0x25E0, 0x25E2, 0x25E5,
+	0x20F0, 0x20F2,
 };
 
 #endif	/* _NVIDIA_DETECT_H */
