@@ -1,3 +1,6 @@
+03 Feb 2022
+	Add support for 470.xx legacy driver
+
 11 May 2021
 	Drop support for RHEL 6
 
